--- a/style.css
+++ b/style.css
@@ -112,26 +112,34 @@ margin: 24px;
 
 
 .para1  {
-  margin-left: 5%;
- font-size: 14px;
+  margin-left: 6%;
+ font-size: 12px;
 }
 
 .para2 {
-  margin-left: 5%;
-  font-size: 11px;
+  margin-left: 6%;
+  font-size: 12px;
 }
 
 h3 {
-  margin-left: 5%;
+  margin-left: 6%;
+  font-size: 25px;
+  margin-top: 25px;
 }
 
 .img1 {
-  margin-left: 5%;
-  width: 95%;
+  margin-left: 6%;
+  width: 92%;
 
 }
 .my {
   text-align: center;
   font-size: 50px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+.coursec {
+
+  width: 90%;
 }
